Edited column width to fix date text being cut off

--- a/resources/sass/files.scss
+++ b/resources/sass/files.scss
@@ -78,7 +78,7 @@
 }
 
 .heading-name {
-  width: 75%
+  width: 74%
 }
 
 .heading-size {
@@ -86,7 +86,7 @@
 }
 
 .heading-date {
-  width: 19%
+  width: 20%
 }
 
 td span {
